# option-trading-infra

./: .dockerignore  .env.example  .gitignore  .readme-gen.json  AGENTS.md  AGENTS_FOCUS.md  README.md  README_EN.md  pyproject.toml  requirements.txt  strategy_spec.toml
.focus/: ACTIVE_SURFACE.md  COMMANDS.md  SYSTEM_MAP.md  TASK_BRIEF.md  TASK_ROUTER.md  TEST_MATRIX.md  context.json
.github/workflows/: ci.yml
config/: strategy_config.toml  strategy_config.yaml
config/general/: data_recorder_setting.json  trading_target.yaml
config/subscription/: subscription.toml
config/timeframe/: 15m.yaml
deploy/: .env.example  Dockerfile  deploy-main.ps1  docker-compose.yml
deploy/init_data/: README.md
doc/architecture/: architecture.md
doc/dev/: backtesting_detailed_design.md  main_entrance_detailed_design.md  strategy_detailed_design.md
doc/geminicli/: 2026-01-09_修复回测数据库驱动强制切换与数据加载逻辑.md
doc/manual/: README.md  cli-usage.md  非技术人员操作手册.md
doc/plan/: 2026-03-08-cli-productization-plan.md  2026-03-09-python-interactive-cli-wizard-plan.md  strategy_infra_optimization_from_references.md
docs/manual/: cli-usage.md
docs/plan/: 2026-03-08-cli-productization-plan.md  2026-03-09-python-interactive-cli-wizard-plan.md
docs/slides/: OptionForge-internal-share.html
docs/workflows/: event-bridge.md  index.md  lifecycle-workflow.md  market-workflow.md  state-workflow.md  subscription-workflow.md
scripts/: run.bat  run_backtesting.bat  run_dashboard.bat  run_datarecorder.bat  run_paper.bat
src/backtesting/: cli.py  config.py  (+3 more)
tests/: TEST.md  focus_testkit.py
(+353 files in other folders)
